# docs/swagger.yaml
@@ -2613,6 +2613,8 @@ definitions:
     type: object
   github_com_MeshCore-Beacon_beacon-server_internal_api.StatsSubpaths:
     properties:
+      analyzedRouteCount:
+        type: integer
       averageNodeCount:
         type: number
       lengthBuckets:
@@ -2624,6 +2626,8 @@ definitions:
       routeCount:
         type: integer
       serverTime:
+        type: integer
+      sourceRouteLimit:
         type: integer
       subpathCount:
         type: integer
@@ -2639,6 +2643,8 @@ definitions:
         items:
           $ref: '#/definitions/github_com_MeshCore-Beacon_beacon-server_internal_api.StatsSubpathRow'
         type: array
+      truncated:
+        type: boolean
       uniqueSubpathCount:
         type: integer
       window:
